# Rox

./: .gitignore  Cargo.toml  README.md  debug_interpreter.sh  debug_parser.sh  debug_tokenizer.sh  input.txt  your_program.sh
src/: ast.rs  ast_printer.rs  environment.rs  error.rs  expr.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  token.rs  value.rs
tests/: scanner.rs
